FullQa New/src/PS Enterprise/objects/Proj__c.object
<CustomObject>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person responsible for this project (optional). If not provided, it&apos;s assumed that the record Owner is the project manager.</description>
        <label>Project Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Is_Resource__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Contact.Is_Resource_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Only active resources are shown. To display all resources, click Show all results.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects Managed</relationshipLabel>
        <relationshipName>ProjectsManaged</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Name_Chain__c</fullName>
        <label>Project Name Chain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Phase__c</fullName>
        <label>Project Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strategy</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Requirements</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Testing</fullName>
                </value>
                <value>
                    <fullName>Deployment</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Status_Notes__c</fullName>
        <label>Project Status Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <description>Select the current project status from the picklist. Alternatively, use Process Builder or workflow rules to use your own logic to control the behavior of the corresponding color indicator field.</description>
        <inlineHelpText>Select the current project status from the picklist. Alternatively, use Process Builder or workflow rules to use your own logic to control the behavior of the corresponding color indicator field.</inlineHelpText>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                    <color>#78C953</color>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                    <color>#F3D904</color>
                </value>
                <value>
                    <fullName>Red</fullName>
                    <color>#CC0000</color>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <description>A descriptive classification of the project</description>
        <label>Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Project</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_Card_Discount_Limit__c</fullName>
        <description>The rate card&apos;s minimum suggested bill rate to which the discount will be applied.</description>
        <inlineHelpText>The rate card&apos;s minimum suggested bill rate to which the discount will be applied.</inlineHelpText>
        <label>Rate Card Discount Limit</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_Card_Percentage_Discount__c</fullName>
        <description>The discount in percent applicable on a rate card&apos;s suggested bill rate when creating or updating a resource request or assignment on a project.</description>
        <inlineHelpText>The discount in percent applicable on a rate card&apos;s suggested bill rate when creating or updating a resource request or assignment on a project.</inlineHelpText>
        <label>Rate Card Percentage Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rate_Card_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A rate card set, composed of multiple separate rate cards, determines which rate cards are applied to a project</description>
        <inlineHelpText>A rate card set, composed of multiple separate rate cards, determines which rate cards are applied to a project</inlineHelpText>
        <label>Rate Card Set</label>
        <referenceTo>Rate_Card_Set__c</referenceTo>
        <relationshipLabel>Rate Card Set Projects</relationshipLabel>
        <relationshipName>Rate_Card_Set_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requires_Dependency_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Dependency Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Schedule_Status__c</fullName>
        <description>Select the current schedule status from the picklist. Alternatively, use Process Builder or workflow rules to use your own logic to control the behavior of the corresponding color indicator field.</description>
        <inlineHelpText>Select the current schedule status from the picklist. Alternatively, use Process Builder or workflow rules to use your own logic to control the behavior of the corresponding color indicator field.</inlineHelpText>
        <label>Schedule Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Schedule_Visual__c</fullName>
        <description>Shows whether the project is on schedule, based on the color selected from the corresponding Schedule Status picklist.</description>
        <formula>IF(ISPICKVAL(Schedule_Status__c,&quot;Yellow&quot;),IMAGE(&quot;/resource/pse__StatusImages/yellow.png&quot;,&quot;2-Yellow&quot;),IF(ISPICKVAL(Schedule_Status__c,&quot;Red&quot;),IMAGE(&quot;/resource/pse__StatusImages/red.png&quot;,&quot;3-Red&quot;),IF(ISPICKVAL(Schedule_Status__c,&quot;Green&quot;),IMAGE(&quot;/resource/pse__StatusImages/green.png&quot;,&quot;1-Green&quot;),&quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows whether the project is on schedule, based on the color selected from the corresponding Schedule Status picklist.</inlineHelpText>
        <label>Schedule Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Backlog_Calculated_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Scheduled Backlog Calculated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scheduled_Backlog_End_Date__c</fullName>
        <label>Scheduled Backlog End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scheduled_Milestone__c</fullName>
        <label>Scheduled Milestone</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scheduled_Time__c</fullName>
        <label>Scheduled Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scope_Status__c</fullName>
        <description>Select the current scope status from the picklist. Alternatively, use Process Builder or workflow rules to use your own logic to control the behavior of the corresponding color indicator field.</description>
        <inlineHelpText>Select the current scope status from the picklist. Alternatively, use Process Builder or workflow rules to use your own logic to control the behavior of the corresponding color indicator field.</inlineHelpText>
        <label>Scope Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scope_Visual__c</fullName>
        <description>Shows whether the project is in scope, based on the color selected from the corresponding Scope Status picklist.</description>
        <formula>IF(ISPICKVAL(Scope_Status__c,&quot;Yellow&quot;),IMAGE(&quot;/resource/pse__StatusImages/yellow.png&quot;,&quot;2-Yellow&quot;),IF(ISPICKVAL(Scope_Status__c,&quot;Red&quot;),IMAGE(&quot;/resource/pse__StatusImages/red.png&quot;,&quot;3-Red&quot;),IF(ISPICKVAL(Scope_Status__c,&quot;Green&quot;),IMAGE(&quot;/resource/pse__StatusImages/green.png&quot;,&quot;1-Green&quot;),&quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows whether the project is in scope, based on the color selected from the corresponding Scope Status picklist.</inlineHelpText>
        <label>Scope Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_Billing_Time_Period_Type__c</fullName>
        <label>Services Billing Time Period Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Share_with_Project_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, sharing rules are created for this record and its children so that the user designated as Project Manager has access to them.</description>
        <label>Share with Project Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Share_with_Project_Resources__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether to share certain project related objects like Milestones with resources that are assigned to the project</inlineHelpText>
        <label>Share with Project Resources</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Explicitly Cancelled</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Visual__c</fullName>
        <description>Shows the status of the project based on the color selected from the corresponding Project Status picklist.</description>
        <formula>IF(ISPICKVAL(Project_Status__c,&quot;Yellow&quot;),IMAGE(&quot;/resource/pse__StatusImages/yellow.png&quot;,&quot;2-Yellow&quot;),IF(ISPICKVAL(Project_Status__c,&quot;Red&quot;),IMAGE(&quot;/resource/pse__StatusImages/red.png&quot;,&quot;3-Red&quot;),IF(ISPICKVAL(Project_Status__c,&quot;Green&quot;),IMAGE(&quot;/resource/pse__StatusImages/green.png&quot;,&quot;1-Green&quot;),&quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the status of the project based on the color selected from the corresponding Project Status picklist.</inlineHelpText>
        <label>Project Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tasks_Total_Percent_Complete_Points__c</fullName>
        <formula>IF (Tasks_Total_Points__c=0, 0, Tasks_Total_Points_Complete__c/Tasks_Total_Points__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tasks Total Percent Complete (Points)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tasks_Total_Points_Complete__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total of task points complete. This field is system generated.</inlineHelpText>
        <label>Tasks Total Points Complete</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tasks_Total_Points__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total of all points for project tasks</inlineHelpText>
        <label>Tasks Total Points</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Credited__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox should be checked for non-billable projects for which consulting time is credited towards utilization.</description>
        <inlineHelpText>This checkbox should be checked for non-billable projects for which consulting time is credited towards utilization.</inlineHelpText>
        <label>Time Credited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Excluded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox should be checked for non-billable projects for which time should neither count for or against utilization.</description>
        <inlineHelpText>This checkbox should be checked for non-billable projects for which time should neither count for or against utilization.</inlineHelpText>
        <label>Time Excluded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Assigned_Hours__c</fullName>
        <label>Total Assigned Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Costs__c</fullName>
        <formula>Internal_Costs__c + External_Costs__c + Expense_Costs__c + Other_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Tasks__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total number of project tasks. This value is system generated.</inlineHelpText>
        <label>Total Number of Tasks</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Projected_Revenue_From_Assignments__c</fullName>
        <label>Total Projected Revenue From Assignments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unscheduled_Backlog__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Unscheduled Backlog</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Work_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Calendar</label>
        <referenceTo>Work_Calendar__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Project_Work_Calendar</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Project_Manager__c</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Region__c</columns>
        <columns>Practice__c</columns>
        <columns>Group__c</columns>
        <columns>Is_Billable__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Is_Active__c</columns>
        <columns>Unscheduled_Backlog__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Is_Template__c</columns>
        <columns>Billed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Proj__c.Managed_Services_Project</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Project_Templates</fullName>
        <columns>Project_Manager__c</columns>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Account__c</columns>
        <columns>Practice__c</columns>
        <columns>Group__c</columns>
        <columns>Is_Billable__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Is_Active__c</columns>
        <columns>Unscheduled_Backlog__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Is_Template__c</columns>
        <columns>Project_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Template__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Project Templates</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>PSE_Member_Share__c</fullName>
        <label>PSE Member Share</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>PSE_PM_Share__c</fullName>
        <label>PSE PM Share</label>
    </sharingReasons>
    <validationRules>
        <fullName>Billable_Projects_may_not_be_Credited</fullName>
        <active>true</active>
        <description>Projects may only be marked as &quot;Time Credited&quot; if they are Non-Billable.</description>
        <errorConditionFormula>AND(Is_Billable__c,Time_Credited__c)</errorConditionFormula>
        <errorDisplayField>Time_Credited__c</errorDisplayField>
        <errorMessage>Projects may only be marked as &quot;Time Credited&quot; if they are Non-Billable.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Billable_Projects_may_not_be_Excluded</fullName>
        <active>true</active>
        <description>Projects may only be marked as &quot;Time Excluded&quot; if they are Non-Billable.</description>
        <errorConditionFormula>AND(Is_Billable__c,Time_Excluded__c)</errorConditionFormula>
        <errorDisplayField>Time_Excluded__c</errorDisplayField>
        <errorMessage>Projects may only be marked as &quot;Time Excluded&quot; if they are Non-Billable.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Credited_Projects_may_not_be_Excluded</fullName>
        <active>true</active>
        <description>Projects may not be marked as &quot;Time Excluded&quot; if they are also marked as &quot;Time Credited&quot;.</description>
        <errorConditionFormula>AND(Time_Credited__c,Time_Excluded__c)</errorConditionFormula>
        <errorDisplayField>Time_Excluded__c</errorDisplayField>
        <errorMessage>Projects may not be marked as &quot;Time Excluded&quot; if they are also marked as &quot;Time Credited&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Discount_Rates_Must_Be_Between_0_to_100</fullName>
        <active>true</active>
        <description>The Rate Card Percentage Discount must be between 0 and 100.</description>
        <errorConditionFormula>Rate_Card_Percentage_Discount__c &lt; 0 || Rate_Card_Percentage_Discount__c &gt; 100</errorConditionFormula>
        <errorMessage>The Rate Card Percentage Discount must be between 0 and 100.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project_Currency_is_Constant</fullName>
        <active>true</active>
        <description>A Project&apos;s Currency field value may not be updated once set.</description>
        <errorConditionFormula>ISCHANGED(CurrencyIsoCode)</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>A Project&apos;s Currency field value may not be updated once set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project_Rate_Card_Set_Currency_Mismatch</fullName>
        <active>true</active>
        <description>The currency must be the same for the project and the rate card set.</description>
        <errorConditionFormula>(Rate_Card_Set__c &lt;&gt; NULL) &amp;&amp;(ISPICKVAL(CurrencyIsoCode, &apos;&apos;) ||
		ISPICKVAL(Rate_Card_Set__r.CurrencyIsoCode , &apos;&apos;) ||
		(TEXT(Rate_Card_Set__r.CurrencyIsoCode) &lt;&gt; TEXT(CurrencyIsoCode)))</errorConditionFormula>
        <errorMessage>You cannot associate the rate card set with the project. They must both use the same currency.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_must_be_before_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Start_Date__c  &gt;  End_Date__c</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>The project start date must be on or before the project end date.</errorMessage>
    </validationRules>
</CustomObject>